@@ -18,7 +18,6 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 
@@ -42,8 +41,6 @@ class SeatServiceImplTest {
     @InjectMocks
     private SeatServiceImpl service;
 
-    // ============= CREATE TESTS =============
-
     @Test
     void shouldCreateSeatSuccessfully() {
         // Given
@@ -51,8 +48,6 @@ class SeatServiceImplTest {
                 .id(1L)
                 .plate("ABC123")
                 .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
                 .build();
 
         var request = new SeatCreateRequest(
@@ -63,9 +58,10 @@ class SeatServiceImplTest {
 
         when(busRepository.findById(1L)).thenReturn(Optional.of(bus));
         when(seatRepository.existsByBusIdAndNumber(1L, "A1")).thenReturn(false);
+        when(seatRepository.countByBusId(1L)).thenReturn(10L);
         when(seatRepository.save(any(Seat.class))).thenAnswer(inv -> {
             Seat s = inv.getArgument(0);
-            s.setId(10L);
+            s.setId(100L);
             return s;
         });
 
@@ -73,49 +69,14 @@ class SeatServiceImplTest {
         var response = service.create(request);
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
+        assertThat(response.id()).isEqualTo(100L);
         assertThat(response.busId()).isEqualTo(1L);
         assertThat(response.number()).isEqualTo("A1");
         assertThat(response.seatType()).isEqualTo(SeatType.STANDARD);
 
         verify(busRepository).findById(1L);
         verify(seatRepository).existsByBusIdAndNumber(1L, "A1");
-        verify(seatRepository).save(any(Seat.class));
-    }
-
-    @Test
-    void shouldCreatePreferentialSeat() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var request = new SeatCreateRequest(
-                1L,
-                "P1",
-                SeatType.PREFERENTIAL
-        );
-
-        when(busRepository.findById(1L)).thenReturn(Optional.of(bus));
-        when(seatRepository.existsByBusIdAndNumber(1L, "P1")).thenReturn(false);
-        when(seatRepository.save(any(Seat.class))).thenAnswer(inv -> {
-            Seat s = inv.getArgument(0);
-            s.setId(10L);
-            return s;
-        });
-
-        // When
-        var response = service.create(request);
-
-        // Then
-        assertThat(response.seatType()).isEqualTo(SeatType.PREFERENTIAL);
-
-        verify(busRepository).findById(1L);
-        verify(seatRepository).existsByBusIdAndNumber(1L, "P1");
+        verify(seatRepository).countByBusId(1L);
         verify(seatRepository).save(any(Seat.class));
     }
 
@@ -136,21 +97,13 @@ class SeatServiceImplTest {
                 .hasMessageContaining("bus 99 not found");
 
         verify(busRepository).findById(99L);
-        verify(seatRepository, never()).existsByBusIdAndNumber(any(), any());
         verify(seatRepository, never()).save(any());
     }
 
     @Test
-    void shouldThrowIllegalStateExceptionWhenSeatNumberAlreadyExistsInBus() {
+    void shouldThrowIllegalStateExceptionWhenSeatNumberAlreadyExists() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
+        var bus = Bus.builder().id(1L).capacity(40).build();
         var request = new SeatCreateRequest(
                 1L,
                 "A1",
@@ -165,26 +118,37 @@ class SeatServiceImplTest {
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("seat A1 already exists in this bus");
 
-        verify(busRepository).findById(1L);
-        verify(seatRepository).existsByBusIdAndNumber(1L, "A1");
         verify(seatRepository, never()).save(any());
     }
 
-    // ============= UPDATE TESTS =============
+    @Test
+    void shouldThrowIllegalStateExceptionWhenBusCapacityExceeded() {
+        // Given
+        var bus = Bus.builder().id(1L).capacity(40).build();
+        var request = new SeatCreateRequest(
+                1L,
+                "A1",
+                SeatType.STANDARD
+        );
+
+        when(busRepository.findById(1L)).thenReturn(Optional.of(bus));
+        when(seatRepository.existsByBusIdAndNumber(1L, "A1")).thenReturn(false);
+        when(seatRepository.countByBusId(1L)).thenReturn(40L);
+
+        // When / Then
+        assertThatThrownBy(() -> service.create(request))
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("Bus capacity exceeded: 40/40 seats already registered");
+
+        verify(seatRepository, never()).save(any());
+    }
 
     @Test
     void shouldUpdateSeatSuccessfully() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
+        var bus = Bus.builder().id(1L).build();
         var existingSeat = Seat.builder()
-                .id(10L)
+                .id(100L)
                 .bus(bus)
                 .number("A1")
                 .seatType(SeatType.STANDARD)
@@ -195,133 +159,20 @@ class SeatServiceImplTest {
                 SeatType.PREFERENTIAL
         );
 
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(existingSeat));
+        when(seatRepository.findById(100L)).thenReturn(Optional.of(existingSeat));
         when(seatRepository.existsByBusIdAndNumber(1L, "A2")).thenReturn(false);
         when(seatRepository.save(any(Seat.class))).thenAnswer(inv -> inv.getArgument(0));
 
         // When
-        var response = service.update(10L, updateRequest);
+        var response = service.update(100L, updateRequest);
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
+        assertThat(response.id()).isEqualTo(100L);
         assertThat(response.number()).isEqualTo("A2");
         assertThat(response.seatType()).isEqualTo(SeatType.PREFERENTIAL);
 
-        verify(seatRepository).findById(10L);
-        verify(seatRepository).existsByBusIdAndNumber(1L, "A2");
+        verify(seatRepository).findById(100L);
         verify(seatRepository).save(any(Seat.class));
-    }
-
-    @Test
-    void shouldUpdateOnlySeatType() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var existingSeat = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var updateRequest = new SeatUpdateRequest(
-                null,
-                SeatType.PREFERENTIAL
-        );
-
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(existingSeat));
-        when(seatRepository.save(any(Seat.class))).thenAnswer(inv -> inv.getArgument(0));
-
-        // When
-        var response = service.update(10L, updateRequest);
-
-        // Then
-        assertThat(response.number()).isEqualTo("A1"); // No cambió
-        assertThat(response.seatType()).isEqualTo(SeatType.PREFERENTIAL);
-
-        verify(seatRepository).findById(10L);
-        verify(seatRepository, never()).existsByBusIdAndNumber(any(), any());
-        verify(seatRepository).save(any(Seat.class));
-    }
-
-    @Test
-    void shouldUpdateSeatWithSameNumber() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var existingSeat = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var updateRequest = new SeatUpdateRequest(
-                "A1", // Mismo número
-                SeatType.PREFERENTIAL
-        );
-
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(existingSeat));
-        when(seatRepository.save(any(Seat.class))).thenAnswer(inv -> inv.getArgument(0));
-
-        // When
-        var response = service.update(10L, updateRequest);
-
-        // Then
-        assertThat(response.number()).isEqualTo("A1");
-        assertThat(response.seatType()).isEqualTo(SeatType.PREFERENTIAL);
-
-        verify(seatRepository).findById(10L);
-        verify(seatRepository, never()).existsByBusIdAndNumber(any(), any()); // No valida porque es el mismo número
-        verify(seatRepository).save(any(Seat.class));
-    }
-
-    @Test
-    void shouldThrowIllegalStateExceptionWhenUpdatingToExistingSeatNumber() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var existingSeat = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var updateRequest = new SeatUpdateRequest(
-                "A2", // Ya existe en el bus
-                SeatType.PREFERENTIAL
-        );
-
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(existingSeat));
-        when(seatRepository.existsByBusIdAndNumber(1L, "A2")).thenReturn(true);
-
-        // When / Then
-        assertThatThrownBy(() -> service.update(10L, updateRequest))
-                .isInstanceOf(IllegalStateException.class)
-                .hasMessageContaining("seat A2 already exists in this bus");
-
-        verify(seatRepository).findById(10L);
-        verify(seatRepository).existsByBusIdAndNumber(1L, "A2");
-        verify(seatRepository, never()).save(any());
     }
 
     @Test
@@ -329,8 +180,9 @@ class SeatServiceImplTest {
         // Given
         var updateRequest = new SeatUpdateRequest(
                 "A2",
-                SeatType.PREFERENTIAL
+                SeatType.STANDARD
         );
+
         when(seatRepository.findById(99L)).thenReturn(Optional.empty());
 
         // When / Then
@@ -342,38 +194,54 @@ class SeatServiceImplTest {
         verify(seatRepository, never()).save(any());
     }
 
-    // ============= GET BY ID TESTS =============
-
     @Test
-    void shouldGetSeatById() {
+    void shouldThrowIllegalStateExceptionWhenUpdateToExistingSeatNumber() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var seat = Seat.builder()
-                .id(10L)
+        var bus = Bus.builder().id(1L).build();
+        var existingSeat = Seat.builder()
+                .id(100L)
                 .bus(bus)
                 .number("A1")
                 .seatType(SeatType.STANDARD)
                 .build();
 
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(seat));
+        var updateRequest = new SeatUpdateRequest(
+                "A2",
+                SeatType.STANDARD
+        );
+
+        when(seatRepository.findById(100L)).thenReturn(Optional.of(existingSeat));
+        when(seatRepository.existsByBusIdAndNumber(1L, "A2")).thenReturn(true);
+
+        // When / Then
+        assertThatThrownBy(() -> service.update(100L, updateRequest))
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("seat A2 already exists in this bus");
+
+        verify(seatRepository, never()).save(any());
+    }
+
+    @Test
+    void shouldGetSeatById() {
+        // Given
+        var bus = Bus.builder().id(1L).build();
+        var seat = Seat.builder()
+                .id(100L)
+                .bus(bus)
+                .number("A1")
+                .seatType(SeatType.STANDARD)
+                .build();
+
+        when(seatRepository.findById(100L)).thenReturn(Optional.of(seat));
 
         // When
-        var response = service.get(10L);
+        var response = service.get(100L);
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
-        assertThat(response.busId()).isEqualTo(1L);
+        assertThat(response.id()).isEqualTo(100L);
         assertThat(response.number()).isEqualTo("A1");
-        assertThat(response.seatType()).isEqualTo(SeatType.STANDARD);
 
-        verify(seatRepository).findById(10L);
+        verify(seatRepository).findById(100L);
     }
 
     @Test
@@ -389,34 +257,22 @@ class SeatServiceImplTest {
         verify(seatRepository).findById(99L);
     }
 
-    // ============= DELETE TESTS =============
-
     @Test
     void shouldDeleteSeatSuccessfully() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
         var seat = Seat.builder()
-                .id(10L)
-                .bus(bus)
+                .id(100L)
                 .number("A1")
-                .seatType(SeatType.STANDARD)
                 .build();
 
-        when(seatRepository.findById(10L)).thenReturn(Optional.of(seat));
+        when(seatRepository.findById(100L)).thenReturn(Optional.of(seat));
         doNothing().when(seatRepository).delete(seat);
 
         // When
-        service.delete(10L);
+        service.delete(100L);
 
         // Then
-        verify(seatRepository).findById(10L);
+        verify(seatRepository).findById(100L);
         verify(seatRepository).delete(seat);
     }
 
@@ -434,44 +290,23 @@ class SeatServiceImplTest {
         verify(seatRepository, never()).delete(any());
     }
 
-    // ============= GET BY BUS ID TESTS =============
-
     @Test
-    void shouldGetSeatsByBusId() {
+    void shouldListSeatsByBusId() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
+        var bus = Bus.builder().id(1L).build();
+        var seat1 = Seat.builder().id(100L).bus(bus).number("A1").seatType(SeatType.STANDARD).build();
+        var seat2 = Seat.builder().id(101L).bus(bus).number("A2").seatType(SeatType.STANDARD).build();
 
-        var seat1 = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var seat2 = Seat.builder()
-                .id(11L)
-                .bus(bus)
-                .number("A2")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        when(seatRepository.findByBusId(1L)).thenReturn(List.of(seat1, seat2));
+        when(seatRepository.findByBusId(1L))
+                .thenReturn(List.of(seat1, seat2));
 
         // When
         var result = service.listByBusId(1L);
 
         // Then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).busId()).isEqualTo(1L);
-        assertThat(result.get(0).number()).isEqualTo("A1");
+        assertThat(result.getFirst().busId()).isEqualTo(1L);
         assertThat(result.get(1).busId()).isEqualTo(1L);
-        assertThat(result.get(1).number()).isEqualTo("A2");
 
         verify(seatRepository).findByBusId(1L);
     }
@@ -479,117 +314,47 @@ class SeatServiceImplTest {
     @Test
     void shouldThrowNotFoundExceptionWhenBusHasNoSeats() {
         // Given
-        when(seatRepository.findByBusId(1L)).thenReturn(List.of());
+        when(seatRepository.findByBusId(99L))
+                .thenReturn(List.of());
 
         // When / Then
-        assertThatThrownBy(() -> service.listByBusId(1L))
+        assertThatThrownBy(() -> service.listByBusId(99L))
                 .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("bus 1 has no seats");
+                .hasMessageContaining("bus 99 has no seats");
 
-        verify(seatRepository).findByBusId(1L);
-    }
-
-    // ============= GET BY BUS ID AND SEAT TYPE TESTS =============
-
-    @Test
-    void shouldGetStandardSeatsByBusId() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var seat1 = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var seat2 = Seat.builder()
-                .id(11L)
-                .bus(bus)
-                .number("A2")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        when(seatRepository.findByBusIdAndSeatType(1L, SeatType.STANDARD))
-                .thenReturn(List.of(seat1, seat2));
-
-        // When
-        var result = service.listByBusIdAndSeatType(1L, SeatType.STANDARD);
-
-        // Then
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).seatType()).isEqualTo(SeatType.STANDARD);
-        assertThat(result.get(1).seatType()).isEqualTo(SeatType.STANDARD);
-
-        verify(seatRepository).findByBusIdAndSeatType(1L, SeatType.STANDARD);
+        verify(seatRepository).findByBusId(99L);
     }
 
     @Test
-    void shouldGetPreferentialSeatsByBusId() {
+    void shouldListSeatsByBusIdAndSeatType() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var seat1 = Seat.builder()
-                .id(10L)
+        var bus = Bus.builder().id(1L).build();
+        var seat = Seat.builder()
+                .id(100L)
                 .bus(bus)
                 .number("P1")
                 .seatType(SeatType.PREFERENTIAL)
                 .build();
 
         when(seatRepository.findByBusIdAndSeatType(1L, SeatType.PREFERENTIAL))
-                .thenReturn(List.of(seat1));
+                .thenReturn(List.of(seat));
 
         // When
         var result = service.listByBusIdAndSeatType(1L, SeatType.PREFERENTIAL);
 
         // Then
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).seatType()).isEqualTo(SeatType.PREFERENTIAL);
+        assertThat(result.getFirst().seatType()).isEqualTo(SeatType.PREFERENTIAL);
 
         verify(seatRepository).findByBusIdAndSeatType(1L, SeatType.PREFERENTIAL);
     }
-
-    @Test
-    void shouldThrowNotFoundExceptionWhenBusHasNoSeatsOfType() {
-        // Given
-        when(seatRepository.findByBusIdAndSeatType(1L, SeatType.PREFERENTIAL))
-                .thenReturn(List.of());
-
-        // When / Then
-        assertThatThrownBy(() -> service.listByBusIdAndSeatType(1L, SeatType.PREFERENTIAL))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("bus 1 has no PREFERENTIAL seats");
-
-        verify(seatRepository).findByBusIdAndSeatType(1L, SeatType.PREFERENTIAL);
-    }
-
-    // ============= GET BY BUS ID AND NUMBER TESTS =============
 
     @Test
     void shouldGetSeatByBusIdAndNumber() {
         // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
+        var bus = Bus.builder().id(1L).build();
         var seat = Seat.builder()
-                .id(10L)
+                .id(100L)
                 .bus(bus)
                 .number("A1")
                 .seatType(SeatType.STANDARD)
@@ -602,90 +367,32 @@ class SeatServiceImplTest {
         var response = service.getByBusIdAndNumber(1L, "A1");
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
-        assertThat(response.busId()).isEqualTo(1L);
         assertThat(response.number()).isEqualTo("A1");
+        assertThat(response.busId()).isEqualTo(1L);
 
         verify(seatRepository).findByBusIdAndNumber(1L, "A1");
     }
 
     @Test
-    void shouldThrowNotFoundExceptionWhenSeatNumberNotFoundInBus() {
+    void shouldListSeatsByBusIdOrderedByNumber() {
         // Given
-        when(seatRepository.findByBusIdAndNumber(1L, "Z99"))
-                .thenReturn(Optional.empty());
-
-        // When / Then
-        assertThatThrownBy(() -> service.getByBusIdAndNumber(1L, "Z99"))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("seat number Z99 not found in this bus");
-
-        verify(seatRepository).findByBusIdAndNumber(1L, "Z99");
-    }
-
-    // ============= GET BY BUS ID ORDER BY NUMBER ASC TESTS =============
-
-    @Test
-    void shouldGetSeatsByBusIdOrderedByNumber() {
-        // Given
-        var bus = Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-
-        var seat1 = Seat.builder()
-                .id(10L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var seat2 = Seat.builder()
-                .id(11L)
-                .bus(bus)
-                .number("A2")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var seat3 = Seat.builder()
-                .id(12L)
-                .bus(bus)
-                .number("A3")
-                .seatType(SeatType.PREFERENTIAL)
-                .build();
+        var bus = Bus.builder().id(1L).build();
+        var seat1 = Seat.builder().id(100L).bus(bus).number("A1").build();
+        var seat2 = Seat.builder().id(101L).bus(bus).number("A2").build();
 
         when(seatRepository.findByBusIdOrderByNumberAsc(1L))
-                .thenReturn(List.of(seat1, seat2, seat3));
+                .thenReturn(List.of(seat1, seat2));
 
         // When
         var result = service.listByBusIdOrderByNumberAsc(1L);
 
         // Then
-        assertThat(result).hasSize(3);
-        assertThat(result.get(0).number()).isEqualTo("A1");
+        assertThat(result).hasSize(2);
+        assertThat(result.getFirst().number()).isEqualTo("A1");
         assertThat(result.get(1).number()).isEqualTo("A2");
-        assertThat(result.get(2).number()).isEqualTo("A3");
 
         verify(seatRepository).findByBusIdOrderByNumberAsc(1L);
     }
-
-    @Test
-    void shouldThrowNotFoundExceptionWhenBusHasNoSeatsForOrdering() {
-        // Given
-        when(seatRepository.findByBusIdOrderByNumberAsc(1L)).thenReturn(List.of());
-
-        // When / Then
-        assertThatThrownBy(() -> service.listByBusIdOrderByNumberAsc(1L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("bus 1 has no seats");
-
-        verify(seatRepository).findByBusIdOrderByNumberAsc(1L);
-    }
-
-    // ============= COUNT BY BUS ID TESTS =============
 
     @Test
     void shouldCountSeatsByBusId() {
@@ -700,32 +407,5 @@ class SeatServiceImplTest {
 
         verify(seatRepository).countByBusId(1L);
     }
-
-    @Test
-    void shouldReturnZeroWhenBusHasNoSeats() {
-        // Given
-        when(seatRepository.countByBusId(1L)).thenReturn(0L);
-
-        // When
-        var count = service.countByBusId(1L);
-
-        // Then
-        assertThat(count).isEqualTo(0L);
-
-        verify(seatRepository).countByBusId(1L);
-    }
-
-    @Test
-    void shouldCountOnlyStandardSeatsInBus() {
-        // Given
-        when(seatRepository.countByBusId(1L)).thenReturn(35L);
-
-        // When
-        var count = service.countByBusId(1L);
-
-        // Then
-        assertThat(count).isEqualTo(35L);
-
-        verify(seatRepository).countByBusId(1L);
-    }
 }
+
